vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__external_name_object_classes-2.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"<< signal dut.foo : std_logic >>\")"
---
Name
  ExternalSignalName
    LtLt
    Keyword(Signal)
    RelativePathname
      PartialPathname
        PathnameElement
          Identifier 'dut'
        Dot
        PathnameElement
          Identifier 'foo'
    Colon
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'std_logic'
    GtGt
