vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__external_name_object_classes.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"<< constant dut.foo : std_logic >>\")"
---
Name
  ExternalConstantName
    LtLt
    Keyword(Constant)
    RelativePathname
      PartialPathname
        PathnameElement
          Identifier 'dut'
        Dot
        PathnameElement
          Identifier 'foo'
    Colon
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'std_logic'
    GtGt
