vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__external_name_package.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"<< signal @lib.pkg : std_logic >>\")"
---
Name
  ExternalSignalName
    LtLt
    Keyword(Signal)
    PackagePathname
      CommAt
      PackagePath
        Identifier 'lib'
        Dot
        Identifier 'pkg'
    Colon
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'std_logic'
    GtGt
