vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__function_call.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"foo(arg => 0)\")"
---
Name
  NameDesignatorPrefix
    Identifier 'foo'
  ParenthesizedName
    LeftPar
    AssociationList
      AssociationElement
        Formal
          Name
            NameDesignatorPrefix
              Identifier 'arg'
          RightArrow
        ActualPart
          ActualPartExpression
            LiteralExpression
              AbstractLiteral '0'
    RightPar
