vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__function_call_many.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"prefix(0, 1)(3).suffix\")"
---
Name
  Identifier 'prefix'
  ParenthesizedName
    LeftPar
    AssociationList
      AssociationElement
        ActualPart
          ActualPartExpression
            LiteralExpression
              AbstractLiteral '0'
      Comma
      AssociationElement
        ActualPart
          ActualPartExpression
            LiteralExpression
              AbstractLiteral '1'
    RightPar
  ParenthesizedName
    LeftPar
    AssociationList
      AssociationElement
        ActualPart
          ActualPartExpression
            LiteralExpression
              AbstractLiteral '3'
    RightPar
  SelectedName
    Dot
    Identifier 'suffix'
