vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__identifier_list.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "to_test_text(Parser::identifier_list, \"foo, bar, baz\")"
---
IdentifierList
  Identifier 'foo'
  Comma
  Identifier 'bar'
  Comma
  Identifier 'baz'
