vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__names__tests__operator_symbol-2.snap
---
source: vhdl_syntax/src/parser/productions/names.rs
expression: "name_to_test_text(\"\\\"AND\\\"\")"
---
Name
  NameDesignatorPrefix
    StringLiteral '"AND"'
